After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736884 - flv: Removed unreachable break statements
flv: Removed unreachable break statements
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Linux
: Normal minor
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-18 11:34 UTC by Sanjay NM
Modified: 2014-09-18 14:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
flv: Removed unreachable break statements (1.02 KB, patch)
2014-09-18 11:34 UTC, Sanjay NM
committed Details | Review

Description Sanjay NM 2014-09-18 11:34:52 UTC
Created attachment 286478 [details] [review]
flv: Removed unreachable break statements

Removed unreachable break statements
Comment 1 Nicolas Dufresne (ndufresne) 2014-09-18 13:41:02 UTC
Review of attachment 286478 [details] [review]:

Ok, this though seems pretty low priority.
Comment 2 Nicolas Dufresne (ndufresne) 2014-09-18 13:59:56 UTC
Thanks for the patch, added to git master.

commit ba4b9b22d000e269f595ecce7771bdec007ccdf0
Author: Sanjay NM <sanjay.nm@samsung.com>
Date:   Thu Sep 18 16:59:52 2014 +0530

    flv: Removed unreachable break statements
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736884