flv: Removed unreachable break statements

https://bugzilla.gnome.org/show_bug.cgi?id=736884